--- a/assets/styles/partials/components/_detail-page.scss
+++ b/assets/styles/partials/components/_detail-page.scss
@@ -21,7 +21,12 @@
 			p {
 				display: inline;
 				padding-left: 10px;
+				margin: 0px 0 3px 0;
 			}
+		}
+		&.header-align-end {
+			display: flex;
+			align-items: flex-end;
 		}
 	}
 	.ad-detail-page-body {
